Sadly, time travel doesn't appear to be realistic

--- a/benchmarking/stack-build-benchmarking/Dockerfile
+++ b/benchmarking/stack-build-benchmarking/Dockerfile
@@ -1,8 +1,8 @@
 FROM fpco/stack-build:lts-5.16
 MAINTAINER Ryan Scott
 
-RUN apt-get update && apt-get install -y \
-     faketime
+# RUN apt-get update && apt-get install -y \
+#      faketime
 
 ADD lorem-ipsum.txt /root/lorem-ipsum.txt
 
