--- a/benchmarking/sc-haskell-benchmarking/Dockerfile
+++ b/benchmarking/sc-haskell-benchmarking/Dockerfile
@@ -1,8 +1,8 @@
 FROM parfunc/sc-haskell:v0.3
 MAINTAINER Ryan Scott
 
-RUN apt-get update && apt-get install -y \
-     faketime
+# RUN apt-get update && apt-get install -y \
+#      faketime
 
 ADD lorem-ipsum.txt /root/lorem-ipsum.txt
 
