--- a/microbenchmarks/Handle/Handle.cabal
+++ b/microbenchmarks/Handle/Handle.cabal
@@ -20,7 +20,10 @@ executable Handle
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.8,
-                       criterion, knob, bytestring
+                       criterion,
+                       knob,
+                       bytestring,
+                       unix
   ghc-options: -rtsopts -Wall -O2
   -- hs-source-dirs:      
   default-language:    Haskell2010
