--- a/microbenchmarks/Handle/Handle.cabal
+++ b/microbenchmarks/Handle/Handle.cabal
@@ -15,10 +15,20 @@ build-type:          Simple
 -- extra-source-files:  
 cabal-version:       >=1.10
 
-executable Handle
+-- We don't need this at all, but cabal forces us to have a lib or an
+-- exe:
+executable Handle-useless 
   main-is:             Main.hs
-  -- other-modules:       
-  -- other-extensions:    
+  build-depends:       base >=4.8,
+                       criterion,
+                       knob,
+                       bytestring,
+                       unix
+
+             
+benchmark Handle
+  main-is:             Main.hs
+  type: exitcode-stdio-1.0
   build-depends:       base >=4.8,
                        criterion,
                        knob,
@@ -27,3 +37,4 @@ executable Handle
   ghc-options: -rtsopts -Wall -O2
   -- hs-source-dirs:      
   default-language:    Haskell2010
+
