--- a/microbenchmarks/Handle/Handle.cabal
+++ b/microbenchmarks/Handle/Handle.cabal
@@ -19,6 +19,7 @@ cabal-version:       >=1.10
 -- exe:
 executable Handle-useless 
   main-is:             Main.hs
+  default-language: Haskell2010
   build-depends:       base >=4.8,
                        criterion, directory,
                        knob,
@@ -28,13 +29,13 @@ executable Handle-useless
              
 benchmark Handle
   main-is:             Main.hs
+  default-language: Haskell2010
   type: exitcode-stdio-1.0
   build-depends:       base >=4.8,
                        criterion, directory,
                        knob,
                        bytestring,
                        unix
-  ghc-options: -rtsopts -Wall -O2
-  -- hs-source-dirs:      
+  ghc-options: -rtsopts -Wall -O2 -eventlog -with-rtsopts=-l-au
   default-language:    Haskell2010
 
