Handle: Force it to use the right ghc.  Problems with current docker files

--- a/microbenchmarks/Handle/stack.yaml
+++ b/microbenchmarks/Handle/stack.yaml
@@ -48,7 +48,7 @@ flags: {}
 extra-package-dbs: []
 
 # Control whether we use the GHC we find on the path
-# system-ghc: true
+system-ghc: false
 # 
 # Require a specific version of stack, using version ranges
 # require-stack-version: -any # Default
@@ -63,7 +63,8 @@ extra-package-dbs: []
 # extra-lib-dirs: [/path/to/dir]
 # 
 # Allow a newer minor version of GHC than the snapshot specifies
-# compiler-check: newer-minor
+compiler: ghc-7.10.4
+compiler-check: match-exact
 
 # This is turned on in the Makefile:
 docker:
