Copy the Dockerfiles over from the other branches.  Start to build a makefile for them

--- a/Dockerfile_opt-dbg
+++ b/Dockerfile_opt-dbg
@@ -17,10 +17,10 @@ RUN git clone --quiet --recursive git://git.haskell.org/ghc.git
 
 WORKDIR /root/ghc
 
-# wip/sc-ghc-7.10 branch:
-# ENV SUBMOD_SHA 2e98e616dc217b92dd19eeb1f781271e440aad5a
+# wip/sc-ghc-7.10-dbg branch:
+# ENV SUBMOD_SHA 7bc4fd6c3346914bc5c2c16f4f86e519acf5c2e5
 # same branch, update version to 7.10.4, sc-haskell release v0.4:
-ENV SUBMOD_SHA 71694066e532731c04a4a37e56b7590f555a01e8
+ENV SUBMOD_SHA 7bc4fd6c3346914bc5c2c16f4f86e519acf5c2e5
 
 ENV GHC_PREFIX /opt/ghc
 
@@ -41,9 +41,5 @@ RUN git remote add fork https://github.com/iu-parfunc/ghc.git && \
 # Nuke the original copy of GHC 7.10 to avoid confusion:
 RUN rm -rf /opt/stackage/lts-5/ghc
 
-# Link everything to make SURE that everyone can see it:
-RUN ln -s /opt/ghc/bin/* /usr/bin/
-
-# This should be good enough, but I had problems with stack/docker integration:
 ENV PATH ${GHC_PREFIX}/bin:${PATH}
 WORKDIR /root
