Failing to get -n1 working on cutter02.  Add HelloBarrier sanity check

--- a/microbenchmarks/Handle/Makefile
+++ b/microbenchmarks/Handle/Makefile
@@ -1,6 +1,10 @@
 
 all: report_sc-v0.4.html report_sc-v0.4-dbg.html report_sc-v0.4-opt.html report_sc-v0.4-opt-dbg.html report_stock.html
 
+dbg: report_sc-v0.4-dbg.html report_sc-v0.4-opt-dbg.html 
+
+ITERS=10000
+
 report_sc-v0.4.html:
 #	stack docker pull --docker-image=parfunc/sc-haskell:v0.4
 	docker run -it parfunc/sc-haskell:v0.4 ghc --version
@@ -9,7 +13,8 @@ report_sc-v0.4.html:
 report_sc-v0.4-dbg.html:
 #	stack docker pull --docker-image=parfunc/sc-haskell:v0.4-dbg
 	docker run -it parfunc/sc-haskell:v0.4-dbg ghc --version
-	stack --docker --docker-image=parfunc/sc-haskell:v0.4-dbg bench --benchmark-arguments="-o $@ --csv report_sc-v0.4-dbg.csv"
+# Ludicrous problem with argument parsing: -o $@ --csv report_sc-v0.4-dbg.csv 
+	stack --docker --docker-image=parfunc/sc-haskell:v0.4-dbg bench --benchmark-arguments="-n$(ITERS)"
 	mv Handle.eventlog Handle_sc-v0.4-dbg.eventlog
 
 report_sc-v0.4-opt.html:
@@ -20,7 +25,8 @@ report_sc-v0.4-opt.html:
 report_sc-v0.4-opt-dbg.html:
 #	stack docker pull --docker-image=parfunc/sc-haskell:v0.4-opt-dbg
 	docker run -it parfunc/sc-haskell:v0.4-opt-dbg ghc --version
-	stack --docker --docker-image=parfunc/sc-haskell:v0.4-opt-dbg bench --benchmark-arguments="-o $@ --csv report_sc-v0.4-opt-dbg.csv"
+# same problem: -o $@ --csv report_sc-v0.4-opt-dbg.csv 
+	stack --docker --docker-image=parfunc/sc-haskell:v0.4-opt-dbg bench --benchmark-arguments="-n$(ITERS)"
 	mv Handle.eventlog Handle_sc-v0.4-opt-dbg.eventlog
 
 report_stock.html:
