--- a/Dockerfile.in
+++ b/Dockerfile.in
@@ -17,9 +17,8 @@ RUN git clone --quiet --recursive git://git.haskell.org/ghc.git
 
 WORKDIR /root/ghc
 
-# wip/sc-ghc-7.10-no-opt-dbg branch:
-# [2016.07.16] Second attempt 0cbec5f521820bd8c88719055c28b0ee88a0439b
-ENV SUBMOD_SHA 0cbec5f521820bd8c88719055c28b0ee88a0439b
+# This is filled in by the Makefile:
+ENV SUBMOD_SHA REPLACE_ME_WITH_SHA
 
 ENV GHC_PREFIX /opt/ghc
 
@@ -28,6 +27,7 @@ ENV GHC_PREFIX /opt/ghc
 RUN git remote add fork https://github.com/iu-parfunc/ghc.git && \
     git fetch fork && \
     git checkout ${SUBMOD_SHA} && \
+    (git log | head) && \
     git reset --hard && git clean -dfx && \
     git submodule sync && \
     git submodule update --init --recursive && \
@@ -40,5 +40,9 @@ RUN git remote add fork https://github.com/iu-parfunc/ghc.git && \
 # Nuke the original copy of GHC 7.10 to avoid confusion:
 RUN rm -rf /opt/stackage/lts-5/ghc
 
+# Link everything to make SURE that everyone can see it:
+RUN ln -s /opt/ghc/bin/* /usr/bin/
+
+# This should be good enough, but I had problems with stack/docker integration:
 ENV PATH ${GHC_PREFIX}/bin:${PATH}
 WORKDIR /root
