--- a/arm_bug/Makefile
+++ b/arm_bug/Makefile
@@ -3,8 +3,8 @@ GHC=$(HOME)/opt/ghc-7.10.3/bin/ghc
 
 FLAGS= -keep-tmp-files -dsuppress-module-prefixes -ddump-to-file \
   -ddump-core-stats -ddump-simpl-stats -dcore-lint -dcmm-lint -ddump-ds \
-  -ddump-simpl -ddump-stg  -ddump-bcos -ddump-cmm -ddump-opt-cmm -ddump-inlinings -rtsopts 
-
+  -ddump-simpl -ddump-stg  -ddump-bcos -ddump-cmm -ddump-opt-cmm -ddump-inlinings -rtsopts \
+  -ddump-llvm 
 # Problems with compilation not terminating:
 #  -ddump-asm -ddump-asm-conflicts -ddump-asm-expanded -ddump-asm-liveness -ddump-asm-native -ddump-asm-regalloc -ddump-asm-regalloc-stages -ddump-asm-stats \
   -ddump-llvm 
@@ -26,7 +26,7 @@ all: Hello.exe
 OPT= -O2
 
 Hello.exe: Hello.hs
-	$(GHC) $(OPT) -fforce-recomp $(FLAGS) $^ -o $@
+	$(GHC) $(OPT) -fforce-recomp $(FLAGS) -v $^ -o $@
 
 clean:
 	rm -f Hello.exe *.hi *.o *.dump* *~
